# HelloWorldCI

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  run_docker.sh
cmake/: GTest.cmake  GTest2.cmake
docker/build-env/: Dockerfile
src/: Adder.cpp  Adder.h  main.cpp
test/: unit_addTest.cpp  unit_dummy.cpp
